--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node": ">= 4.0.0"
   },
   "bin": {
-    "programmer-calendar": "./bin/calendar.js"
+    "programmer-calendar": "./bin/calendar.js",
+    "programmer-calendar-goose-city": "./bin/calendarGooseCity.js"
   }
 }
